syntax = "proto3";

package trafficAI;

service Greeter {

  rpc sayHello (HelloRequest) returns (HelloReply) {}

  rpc sendImage (ImageRequest) returns (ImageReply) {}

  rpc sendVideo (VideoRequest) returns (VideoReply) {}

}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message ImageRequest {
  bytes image = 1;
}

message ImageReply {
  string message = 1;
}

message VideoRequest {
  bytes video = 1;
}

message VideoReply {
  string message = 1;
}